--- a/car_details.ipynb
+++ b/car_details.ipynb
@@ -2,7 +2,6 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "79b4e51a",
    "metadata": {},
    "source": [
     "## Vizualização de dados sobre venda de carros"
@@ -10,7 +9,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7e5942d",
    "metadata": {},
    "source": [
     "## Informações que seram geradas com o DF em questão\n",
@@ -22,7 +20,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "865eb852",
    "metadata": {},
    "source": [
     "### Configurando ambiente e recebendo os dados  "
@@ -30,8 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
-   "id": "5a422c01",
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,8 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
-   "id": "ac31541c",
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +76,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Maruti 800 AC</td>\n",
        "      <td>2007</td>\n",
        "      <td>60000</td>\n",
@@ -92,7 +87,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Maruti Wagon R LXI Minor</td>\n",
        "      <td>2007</td>\n",
        "      <td>135000</td>\n",
@@ -103,7 +98,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Hyundai Verna 1.6 SX</td>\n",
        "      <td>2012</td>\n",
        "      <td>600000</td>\n",
@@ -114,7 +109,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Datsun RediGO T Option</td>\n",
        "      <td>2017</td>\n",
        "      <td>250000</td>\n",
@@ -125,7 +120,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Honda Amaze VX i-DTEC</td>\n",
        "      <td>2014</td>\n",
        "      <td>450000</td>\n",
@@ -136,7 +131,7 @@
        "      <td>Second Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>...</th>\n",
+       "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
        "      <td>...</td>\n",
@@ -147,7 +142,7 @@
        "      <td>...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4335</th>\n",
+       "      <td>4335</td>\n",
        "      <td>Hyundai i20 Magna 1.4 CRDi (Diesel)</td>\n",
        "      <td>2014</td>\n",
        "      <td>409999</td>\n",
@@ -158,7 +153,7 @@
        "      <td>Second Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4336</th>\n",
+       "      <td>4336</td>\n",
        "      <td>Hyundai i20 Magna 1.4 CRDi</td>\n",
        "      <td>2014</td>\n",
        "      <td>409999</td>\n",
@@ -169,7 +164,7 @@
        "      <td>Second Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4337</th>\n",
+       "      <td>4337</td>\n",
        "      <td>Maruti 800 AC BSIII</td>\n",
        "      <td>2009</td>\n",
        "      <td>110000</td>\n",
@@ -180,7 +175,7 @@
        "      <td>Second Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4338</th>\n",
+       "      <td>4338</td>\n",
        "      <td>Hyundai Creta 1.6 CRDi SX Option</td>\n",
        "      <td>2016</td>\n",
        "      <td>865000</td>\n",
@@ -191,7 +186,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4339</th>\n",
+       "      <td>4339</td>\n",
        "      <td>Renault KWID RXT</td>\n",
        "      <td>2016</td>\n",
        "      <td>225000</td>\n",
@@ -250,7 +245,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "beb249d2",
    "metadata": {},
    "source": [
     "### Visualizando informações do DF carregado "
@@ -258,8 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
-   "id": "af8e83f2",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -269,16 +262,14 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 4340 entries, 0 to 4339\n",
       "Data columns (total 8 columns):\n",
-      " #   Column         Non-Null Count  Dtype \n",
-      "---  ------         --------------  ----- \n",
-      " 0   name           4340 non-null   object\n",
-      " 1   year           4340 non-null   int64 \n",
-      " 2   selling_price  4340 non-null   int64 \n",
-      " 3   km_driven      4340 non-null   int64 \n",
-      " 4   fuel           4340 non-null   object\n",
-      " 5   seller_type    4340 non-null   object\n",
-      " 6   transmission   4340 non-null   object\n",
-      " 7   owner          4340 non-null   object\n",
+      "name             4340 non-null object\n",
+      "year             4340 non-null int64\n",
+      "selling_price    4340 non-null int64\n",
+      "km_driven        4340 non-null int64\n",
+      "fuel             4340 non-null object\n",
+      "seller_type      4340 non-null object\n",
+      "transmission     4340 non-null object\n",
+      "owner            4340 non-null object\n",
       "dtypes: int64(3), object(5)\n",
       "memory usage: 271.4+ KB\n"
      ]
@@ -291,8 +282,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 149,
-   "id": "418f0eac",
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -309,7 +299,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 149,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -321,8 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
-   "id": "c80892ff",
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +328,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 150,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -351,8 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 151,
-   "id": "69d4e8ae",
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -383,49 +371,49 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>count</th>\n",
+       "      <td>count</td>\n",
        "      <td>4340.000000</td>\n",
        "      <td>4.340000e+03</td>\n",
        "      <td>4340.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>mean</th>\n",
+       "      <td>mean</td>\n",
        "      <td>2013.090783</td>\n",
        "      <td>5.041273e+05</td>\n",
        "      <td>66215.777419</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>std</th>\n",
+       "      <td>std</td>\n",
        "      <td>4.215344</td>\n",
        "      <td>5.785487e+05</td>\n",
        "      <td>46644.102194</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>min</th>\n",
+       "      <td>min</td>\n",
        "      <td>1992.000000</td>\n",
        "      <td>2.000000e+04</td>\n",
        "      <td>1.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>25%</th>\n",
+       "      <td>25%</td>\n",
        "      <td>2011.000000</td>\n",
        "      <td>2.087498e+05</td>\n",
        "      <td>35000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>50%</th>\n",
+       "      <td>50%</td>\n",
        "      <td>2014.000000</td>\n",
        "      <td>3.500000e+05</td>\n",
        "      <td>60000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>75%</th>\n",
+       "      <td>75%</td>\n",
        "      <td>2016.000000</td>\n",
        "      <td>6.000000e+05</td>\n",
        "      <td>90000.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>max</th>\n",
+       "      <td>max</td>\n",
        "      <td>2020.000000</td>\n",
        "      <td>8.900000e+06</td>\n",
        "      <td>806599.000000</td>\n",
@@ -446,7 +434,7 @@
        "max    2020.000000   8.900000e+06  806599.000000"
       ]
      },
-     "execution_count": 151,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -458,8 +446,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 152,
-   "id": "a37c9e3c",
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +471,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0265eff",
    "metadata": {},
    "source": [
     "### Tratando o DF"
@@ -492,8 +478,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 153,
-   "id": "a5f2287d",
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -529,7 +514,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>Maruti 800 AC</td>\n",
        "      <td>2007</td>\n",
        "      <td>60000</td>\n",
@@ -540,7 +525,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>Maruti Wagon R LXI Minor</td>\n",
        "      <td>2007</td>\n",
        "      <td>135000</td>\n",
@@ -551,7 +536,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>Hyundai Verna 1.6 SX</td>\n",
        "      <td>2012</td>\n",
        "      <td>600000</td>\n",
@@ -562,7 +547,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>Datsun RediGO T Option</td>\n",
        "      <td>2017</td>\n",
        "      <td>250000</td>\n",
@@ -573,7 +558,7 @@
        "      <td>First Owner</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>Honda Amaze VX i-DTEC</td>\n",
        "      <td>2014</td>\n",
        "      <td>450000</td>\n",
@@ -603,7 +588,7 @@
        "4           Diesel  Individual           Manual  Second Owner  "
       ]
      },
-     "execution_count": 153,
+     "execution_count": 36,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,8 +608,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
-   "id": "b07e6781",
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -647,19 +631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "266cfbee",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Formatando os valores\n",
-    "df.style.format({'Valor_Venda': ''})\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 155,
-   "id": "38567507",
+   "execution_count": 38,
    "metadata": {},
    "outputs": [
     {
@@ -679,7 +651,7 @@
        "Name: Valor_Venda, Length: 4340, dtype: float64"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -691,7 +663,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f245eeee",
    "metadata": {},
    "source": [
     "### Analizando os Dados"
@@ -699,7 +670,6 @@
   },
   {
    "cell_type": "markdown",
-   "id": "21aba33c",
    "metadata": {},
    "source": [
     "#### Criando as Series para plotar os dados "
@@ -707,21 +677,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
-   "id": "fa0f1167",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "504127.3117511521"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Media de precos\n",
+    "df['Valor_Venda'].mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Media de precos\n",
-    "med_carro = df['Valor_Venda'].mean()\n",
+    "# Preco por ano\n",
+    "ano = df['Ano_Venda']\n",
+    "preco = df['Valor_Venda']\n",
     "\n",
-    "\n"
+    "plt.bar(ano, preco)\n",
+    "plt.title(\"Ano de Venda X Valor da Venda\")\n",
+    "plt.xlabel(\"Ano da Venda\")\n",
+    "plt.xticks(np.arange(1990, 2021, step=10))\n",
+    "plt.ylabel(\"Valor da Venda\")\n",
+    "plt.yticks(np.arange(50000.00, 5000000.00))\n",
+    "plt.show()"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -735,7 +732,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
